# data-engineer-project

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  MIGRATION_PLAN.md  Makefile  README.md  compose.yml  create_tables.sql  dag.py  dbt_project.yml  docker-compose.yml  fetch_steam_data.py  pyproject.toml  requirements.txt  snowflake_connection.py  spark.py  steamspy_api_ingestion.py  steamspy_schema.sql
.astro/: config.yaml
.claude/commands/: dbt.md  monitor-dag.md  ticket.md  trigger-dag.md
Models/: sources.yml
Models/int/: categories.sql
Models/staging/: staging.yml  staging_steam_games.sql
airflow/: Dockerfile
airflow/dags/: replication.py  steamspy.py
config/: airflow.cfg
conn/: minio_conn.py
dags/: steam_ingestion_dag.py  steamspy.py  steamspy_dev_notes.md  steamspy_to_minio.py
dags/conn/: minio_conn.py  spark_conf.py
dags/spark_jobs/: bronze_to_silver.py
dbt/: dbt_project.yml  dbt_style_guide.md
dbt/models/: sources.yml
docs/airflow/: commands.md
docs/decisions/: duck_make.md  replication_explanaion.md
docs/docker/: commands.md
docs/minio/: querying.md
docs/spark/: commands.md
infra/: README.md
infra/docker/: compose.yml
infra/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars
infrastructure/docker/: Makefile  docker-compose.airbyte.yml  env.example  (+2 more)
ingest/: fetch_steam_data.py  snowflake_connection.py
models/: sources.yml
notebooks/: others.ipynb  steamspy_analysis.ipynb  word_cloud.ipynb
seeds/: stop_words.csv
spark/: Dockerfile  __init__.py
tests/: test_imports.py  test_steamspy_extract.py
(+92 files in other folders)
